--- a/config/database.yml
+++ b/config/database.yml
@@ -6,11 +6,13 @@ development:
   pool: 5
   timeout: 5000
   username: postgres
-# production: 
-#   adapter: postgresql
-#   database: postgres
-#   pool: 5
-#   timeout: 5000
+  
+production: 
+  adapter: postgresql
+  database: postgres
+  encoding: utf8
+  pool: 5
+  timeout: 5000
 # test: 
 #   adapter: postgresql
 #   database: postgres
